--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,8 +15,6 @@
 	<link rel="stylesheet" href="{{ '/assets/css/extra.css' | relative_url }}">
 </head>
 <body>
-	<a id="skip-to-content" href="#content">Skip to the content.</a>
-
 	<header class="page-header" role="banner">
 		<h1 class="project-name">{{ site.title }}</h1>
 		<h2 class="project-tagline">{{ page.description | default: site.description | default: site.github.project_tagline }}</h2>
@@ -29,14 +27,14 @@
 		<a href="{{ site.github.tar_url }}" class="btn">Download .tar.gz</a>
 		{% endif %}
 	</header>
-
 	<main id="content" class="main-content" role="main">
 		{{ content }}
-
 		<footer class="site-footer">
-			{% if site.github.is_project_page %}
+		{% if page.name == "index.md" %}
 			<span class="site-footer-owner"><a href="{{ site.github.repository_url }}">{{ site.github.repository_name }}</a> est maintenu par <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a>.</span>
-			{% endif %}
+		{% else %}
+			<span class="site-footer-owner">Vous pouvez contribuer à cet article en <a href="{{ site.github.repository_url }}/issues/new/choose">signalant</a> un problème ou en <a href="{{ site.github.repository_url }}/pulls">proposant</a> des modifications sur <a href="{{ site.github.repository_url }}">github</a>.</span>
+		{% endif %}
 			<span class="site-footer-credits">Ce site a été généré avec <a href="https://pages.github.com">GitHub Pages</a>.</span>
 		</footer>
 	</main>
