--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,7 +20,7 @@
       <h1 class="project-name">{{ site.title }}</h1>
       <h2 class="project-tagline">{{ page.description | default: site.description | default: site.github.project_tagline }}</h2>
       {% if site.github.is_project_page %}
-        <a href="/" class="btn">Aller à l'index</a>
+        <a href="{{ '/' | relative_url }}" class="btn">Aller à l'index</a>
         <a href="{{ site.github.repository_url }}" class="btn">Voir sur GitHub</a>
       {% endif %}
       {% if site.show_downloads %}
