--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,6 +12,7 @@
 
     <link rel="icon" type="image/png" href="{{ '/assets/images/icons/logo_moche_32.png' | relative_url }}"/>
     <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
+	<link rel="stylesheet" href="{{ '/assets/css/extra.css' | relative_url }}">
   </head>
   <body>
     <a id="skip-to-content" href="#content">Skip to the content.</a>
