--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,7 +11,7 @@
 	<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 
 	<link rel="icon" type="image/png" href="{{ '/assets/images/icons/logo_moche_32.png' | relative_url }}"/>
-	<link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
+	<link rel="stylesheet" href="{{ '/assets/css/normalize_custom.css' | relative_url }}">
 	<link rel="stylesheet" href="{{ '/assets/css/extra.css' | relative_url }}">
 </head>
 <body>
