--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,7 +29,7 @@
 		{% if page.name == "index.md" %}
 			<span class="site-footer-owner"><a href="{{ site.github.repository_url }}">{{ site.github.repository_name }}</a> est maintenu par <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a>.</span>
 		{% else %}
-			<span class="site-footer-owner">Vous pouvez contribuer à cet article ou rapporter un problème depuis <a href="{{ site.github.repository_url }}/issues/new/choose">[Github]</a>.</span>
+			<span class="site-footer-owner">Vous pouvez contribuer à cet article ou rapporter un problème depuis <a href="{{ site.github.repository_url }}/issues/new/choose">Github</a>.</span>
 		{% endif %}
 			<span class="site-footer-credits">Ce site a été généré avec <a href="https://pages.github.com">GitHub Pages</a>.</span>
 		</footer>
