--- a/assets/css/extra.css
+++ b/assets/css/extra.css
@@ -24,3 +24,13 @@ body
 	color: white;
 	background-color: rgba(255,255,255,0.16);
 }
+
+.main-content code
+{
+	color: #5E7382;
+}
+
+.site-footer-credits
+{
+	color: #67777E;
+}
