--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -17,7 +17,7 @@ css: blog
 {% for tag in tags %}
   {% if tag != "" %}
     {% assign idx_path = idx_path | append: tag | append: "/" %}
-    <kbd><a href="{{ idx_path }}">{{ tag }}</a></kbd>
+    <kbd><a href="{{ site.baseurl }}{{ idx_path }}">{{ tag }}</a></kbd>
   {% endif %}
 {% endfor %}
 
