--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -28,7 +28,7 @@ layout: default
         {% for tag in tags %}
           {% if tag != "" %}
             {% assign idx_path = idx_path | append: tag | append: "/" %}
-            <kbd><a href="{{ site.baseurl }}{{ idx_path }}">{{ tag }}</a></kbd>
+            <a href="{{ site.baseurl }}{{ idx_path }}"><kbd>{{ tag }}</kbd></a>
           {% endif %}
         {% endfor %}
       </li>
