--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,26 +1,28 @@
 ---
 layout: default
-css: blog
 ---
 
-<h1> {{ page.title }} </h1>
-
-<b>Par {{ page.author }}</b><br>
-<b>Le {% include date.html the_date=page.date %}</b>
-{% if page.last_update %}
-  (Dernière mise à jour le {% include date.html the_date=page.last_update %})
-{% endif %}
-<br>
-<b>Tags :</b>
-{% assign tags = page.dir | split: "/" %}
-{% assign idx_path = "/" %}
-{% for tag in tags %}
-  {% if tag != "" %}
-    {% assign idx_path = idx_path | append: tag | append: "/" %}
-    <a href="{{ site.baseurl }}{{ idx_path }}"><kbd>{{ tag }}</kbd></a>
-  {% endif %}
-{% endfor %}
-
-<hr>
-
-{{ content }}
+<article>
+	<header>
+		<h1> {{ page.title }} </h1>
+		<div>
+			<b><address>Par {{ page.author }}</address></b>
+			<b>Le <time datetime="{{ page.date }}">{% include date.html the_date=page.date %}</time></b>
+			{% if page.last_update %}
+			(Dernière mise à jour le <time datetime="{{ page.last_update }}">{% include date.html the_date=page.last_update %}</time>)
+			{% endif %}
+			<br/>
+			<b>Tags : </b>
+			{% assign tags = page.dir | split: "/" %}
+			{% assign idx_path = "/" %}
+			{% for tag in tags %}
+				{% if tag != "" %}
+					{% assign idx_path = idx_path | append: tag | append: "/" %}
+					<a href="{{ site.baseurl }}{{ idx_path }}"><kbd>{{ tag }}</kbd></a>
+				{% endif %}
+			{% endfor %}
+		</div>
+	</header>
+	<hr>
+	{{ content }}
+</article>
